dada_tests/ty_parsing/perms_with_two_paths/compiler-output.ref
Error: no paths are needed after the `my` permission
   ╭─[dada_tests/ty_parsing/perms_with_two_paths.dada:4:44]
   │
 4 │ class List1(a: my Value, b: my Value, v: my{a, b} Value)  #! ERROR no paths are needed after the `my` permission
   ·                                            ───┬──  
   ·                                               ╰──── here
───╯
Error: no paths are needed after the `our` permission
   ╭─[dada_tests/ty_parsing/perms_with_two_paths.dada:5:45]
   │
 5 │ class List2(a: my Value, b: my Value, v: our{a, b} Value)  #! ERROR no paths are needed after the `our` permission
   ·                                             ───┬──  
   ·                                                ╰──── here
───╯
